--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.1.6",
     "@vitejs/plugin-react": "^4.4.1",
     "framer-motion": "^12.11.0",
