--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@tailwindcss/vite": "^4.1.6",
     "@vitejs/plugin-react": "^4.4.1",
     "framer-motion": "^12.11.0",
+    "i18next": "^25.1.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.1",
     "react-router-dom": "^7.6.0",
+    "react-select": "^5.10.1",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/node": "^22.15.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
